<resources>
    <string name="app_name">Conversor</string>
    <string name="txt_number">Ingrese un número</string>
    <string name="binary">Binario</string>
    <string name="octal">Octal</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="txt_to">A</string>
    <string name="txt_result">Resultado</string>
    <string name="btn_a">A</string>
    <string name="btn_b">B</string>
    <string name="btn_c">C</string>
    <string name="btn_d">D</string>
    <string name="btn_e">E</string>
    <string name="btn_f">F</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_del">DEL</string>
    <string name="btn_ac">AC</string>
    <string name="txt_clipboard">Copiado al portapapeles</string>
</resources>