<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumber">

        <Spinner
            android:id="@+id/spnBase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spnGoal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="@string/txt_result"
        android:importantForAutofill="no"
        android:maxLines="4"
        android:minLines="1"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TableLayout
        android:id="@+id/buttonsTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:weightSum="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult">

        <TableRow
            android:id="@+id/rowOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5">

            <Button
                android:id="@+id/btnA"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/btn_a" />

            <Button
                android:id="@+id/btnB"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/btn_b" />

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_9" />
        </TableRow>

        <TableRow
            android:id="@+id/rowTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5">

            <Button
                android:id="@+id/btnC"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/btn_c" />

            <Button
                android:id="@+id/btnD"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/btn_d" />

            <Button
                android:id="@+id/btnFour"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_4" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_5" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_6" />
        </TableRow>

        <TableRow
            android:id="@+id/rowTree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5">

            <Button
                android:id="@+id/btnE"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/btn_e" />

            <Button
                android:id="@+id/btnF"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/btn_f" />

            <Button
                android:id="@+id/btnOne"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_1" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_2" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_3" />
        </TableRow>

        <TableRow
            android:id="@+id/rowFour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="5">

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/btn_del"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/btn_ac"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_span="3"
                android:layout_weight="3"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/btn_0" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>